made temporary fix to spacing problem

--- a/public_html/styles/custom_css/development.css
+++ b/public_html/styles/custom_css/development.css
@@ -1,1 +1,8 @@
 /*Not to be used in live site*/
+
+
+.test {
+  border-style:solid;
+  border-color:red;
+  background-color: grey;
+}
